
<<<<<<< HEAD
=======
CHANGES IN VERSION 1.7.2 [2017-3-22]
-----------------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o In 'image' method, 'superpose = TRUE' now supports multiple LHS
        arguments in the formula (e.g., formula = a + b ~ x * y)

CHANGES IN VERSION 1.7.1 [2016-11-29]
-----------------------------------

NEW FEATURES

    o PCA is now supported for larger-than-memory on-disk datasets
    o External 'matter' matrices replace 'Binmat' matrices for on-disk support
    o Added 'image3D' aliases for all 'ResultSet' subclasses

SIGNIFICANT USER-VISIBLE CHANGES

    o Added 'matter' package to Depends list

>>>>>>> 41b2923... v.1.7.2 bug fixes and cleanup
CHANGES IN VERSION 1.5.2 [2016-10-6]
-----------------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Updated 'batchProcess' to support reduceDimension and peakAlign
    o Now 'peakAlign' looks for an existing 'mean' column in featureData
    o Added 'matter' support to readAnalyze (previously only readImzML)

BUG FIXES

    o Fixed bug when indexing into data cube using 'imageData' method

CHANGES IN VERSION 1.5.1 [2016-9-21]
-----------------------------------

BUG FIXES

    o Corrected author and maintainer contact information

CHANGES IN VERSION 1.5.0 [2016-5-25]
-----------------------------------

NEW FEATURES

    o Added experimental support for 'matter' on-disk matrices, from
        package 'matter', hosted at https://github.com/kuwisdelu/matter,
        as a replacement for 'Binmat' matrices

BUG FIXES

    o Fixed subsetting SImageData objects with variables

CHANGES IN VERSION 1.3.3 [2016-4-20]
-----------------------------------

BUG FIXES

    o Subsetting the S4 part of Binmat objects by row is now an error
    o Providing non-positive m/z values to 'readImzML' is now an error
    o Elements of 'imageData' that fail to 'combine' or which
        are missing from one or more of the objects are now