@@ -9,7 +9,7 @@ Description: Implements statistical & computational tools for analyzing
 	mass spectrometry imaging datasets, including methods for efficient
 	pre-processing, spatial segmentation, and classification.
 License: Artistic-2.0
-Depends: BiocGenerics, Biobase, graphics, methods, stats, ProtGenerics
+Depends: BiocGenerics, Biobase, graphics, matter, methods, stats, ProtGenerics
 Imports: grid, irlba, lattice, signal, sp, stats4, utils
 Suggests: BiocStyle, testthat
 biocViews: Software, Infrastructure, Proteomics, Lipidomics, Normalization,
