@@ -4,6 +4,7 @@
 setMethod("PLS", signature = c(x = "SImageSet", y = "matrix"), 
 	function(x, y, ncomp = 20,
 		method = "nipals",
+		center = TRUE,
 		scale = FALSE,
 		iter.max = 100, ...)
 	{
@@ -40,14 +41,12 @@ setMethod("PLS", signature = c(x = "SImageSet", y = "matrix"),
 			Yscale <- rep(1, ncol(Y))
 			names(Yscale) <- colnames(Y)
 		}
-		center <- attr(Xt, "scaled:center")
-		Ycenter <- attr(Y, "scaled:center")
 		.message("PLS: Fitting partial least squares components.")
 		fit <- .PLS.fit(Xt, Y, ncomp=max(ncomps), method=method, iter.max=iter.max)
 		result <- lapply(ncomps, function(ncomp) {
 			append(fit, list(y=newy, ncomp=ncomp,
-				method=method, scale=scale, center=center,
-				Yscale=Yscale, Ycenter=Ycenter))
+				method=method, center=center, scale=scale,
+				Ycenter=Ycenter, Yscale=Yscale))
 		})
 		model <- AnnotatedDataFrame(
 			data=data.frame(ncomp=sapply(result, function(fit) fit$ncomp)),
@@ -105,7 +104,17 @@ setMethod("predict", "PLS",
 			pred <- .PLS.predict(Xt, Y, ncomp=res$ncomp,
 				loadings=res$loadings, weights=res$weights,
 				Yweights=res$Yweights)
-			pred$fitted <- t(res$Yscale * t(pred$fitted) + res$Ycenter)
+			if ( is.logical(res$Ycenter) && !Ycenter ) {
+				Ycenter <- 0
+			} else {
+				Ycenter <- res$Ycenter
+			}
+			if ( is.logical(res$Yscale) && !Yscale ) {
+				Yscale <- 1
+			} else {
+				Yscale <- res$Yscale
+			}
+			pred$fitted <- t(Yscale * t(pred$fitted) + Ycenter)
 			if ( is.factor(object$y) || !missing.newy ) {
 				pred$classes <- factor(apply(pred$fitted, 1, which.max))
 				if ( !is.null(attr(newy, "PLS:y")) ) {
