@@ -20,6 +20,7 @@
 \usage{
 \S4method{OPLS}{SImageSet,matrix}(x, y, ncomp = 20,
     method = "nipals",
+    center = TRUE,
     scale = FALSE,
     keep.Xnew = TRUE,
     iter.max = 100, \dots)
@@ -37,6 +38,7 @@
     \item{y}{The response variable, which can be a \code{matrix} or a \code{vector} for ordinary O-PLS, or a \code{factor} or a \code{character} for O-PLS-DA.}
     \item{ncomp}{The number of O-PLS components to calculate.}
     \item{method}{The function used to calculate the projection.}
+    \item{center}{Should the data be centered first? This is passed to \code{scale}.}
     \item{scale}{Shoud the data be scaled first? This is passed to \code{scale}.}
     \item{keep.Xnew}{Should the new data matrix be kept after filtering out the orthogonal variation?}
     \item{iter.max}{The number of iterations to perform for the NIPALS algorithm.}
