@@ -17,8 +17,10 @@
 }
 \usage{
     \S4method{PCA}{SImageSet}(x, ncomp = 20,
-        method = c("irlba", "svd"),
-        scale = FALSE, \dots)
+        method = c("irlba", "nipals", "svd"),
+        center = TRUE,
+        scale = FALSE,
+        iter.max = 100, \dots)
     
     \S4method{predict}{PCA}(object, newx, \dots)
 }
@@ -26,7 +28,9 @@
     \item{x}{The imaging dataset for which to calculate the principal components.}
     \item{ncomp}{The number of principal components to calculate.}
     \item{method}{The function used to calculate the singular value decomposition.}
+    \item{center}{Should the data be centered first? This is passed to \code{scale}.}
     \item{scale}{Shoud the data be scaled first? This is passed to \code{scale}.}
+    \item{iter.max}{The number of iterations to perform for the NIPALS algorithm.}
     \item{\dots}{Ignored.}
     \item{object}{The result of a previous call to \code{\link[Cardinal]{PCA}}.}
     \item{newx}{An imaging dataset for which to calculate the principal components scores based on the aleady-calculated principal components loadings.}
